# forecaster

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-entrpoint.sh  docker-entrypoint.sh
.github/workflows/: build.yaml  linter.yaml  release.yaml  test.yaml
src/: main.rs
