[package]
name = "forecaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
frankenstein = "0.30.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "forecaster"
path = "src/main.rs"